# SpotLoad

./: .cache  .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt  setup.py  tag_presets.json  todos.txt  update.py  utils.py
spotload/: __init__.py  __main__.py  chooser.py  providers.py  spotload.py  utils.py
spotload/provider/: spotify.py  youtube.py  youtube_music.py
