[build-system]
requires = [
    "ytm @ git+https://github.com/tombulled/python-youtube-music.git@master",
    "setuptools==65.5.0",
    "requests==2.28.2",
    "spotipy==2.22.0",
    "mutagen==1.46.0",
    "pathvalidate==2.5.2",
    "youtube-search-python==1.6.6",
    "ffmpeg-python==0.2.0",
    "yt-dlp"
]

[project]
name = "SpotLoad"
version = "1.0"
requires-python = ">=3.11"

[project.scripts]
spotload = "spotload.__main__:run

